paperless/paperless-ngx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx
  name: paperless-ngx
  namespace: paperless
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx
      app.kubernetes.io/name: paperless-ngx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: paperless-ngx
        app.kubernetes.io/name: paperless-ngx
    spec:
      containers:
      - name: paperless-ngx
        image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0

        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 60
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 1

        resources:
          requests:
            cpu: 500m
            memory: 1Gi

        ports:
        - containerPort: 8000
          name: http
          protocol: TCP

        volumeMounts:
        - mountPath: /usr/src/paperless/consume
          name: consume
        - mountPath: /usr/src/paperless/data
          name: data
        - mountPath: /usr/src/paperless/media
          name: media

      volumes:
      - name: consume
        persistentVolumeClaim:
          claimName: pvc-smb-consume
      - name: data
        persistentVolumeClaim:
          claimName: paperless-ngx-data
      - name: media
        persistentVolumeClaim:
          claimName: paperless-ngx-media

      automountServiceAccountToken: true
      serviceAccount: default
      serviceAccountName: default
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx
  name: paperless-ngx
  namespace: paperless
spec:
  ports:
    - port: 8000
      targetPort: 8000
      name: tcp
  selector:
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx
