paperless/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: paperless-ngx-redis
    app.kubernetes.io/name: redis
  name: paperless-ngx-redis
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx-redis
      app.kubernetes.io/name: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: paperless-ngx-redis
        app.kubernetes.io/name: redis
    spec:
      affinity:
        # run close to paperless-ngx
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: paperless-ngx
                    app.kubernetes.io/name: paperless-ngx
                topologyKey: kubernetes.io/hostname
              weight: 1

      containers:
        - name: redis
          image: redis:8.10.2-alpine
          command:
            - redis-server
            - /etc/redis/redis.conf
            - --requirepass
            - $(REDIS_PASSWORD)
          ports:
            - name: redis
              containerPort: 6379
          startupProbe:
            failureThreshold: 10
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            tcpSocket:
              port: redis
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 5
            exec:
              command:
                - redis-cli
                - --no-auth-warning
                - -u
                - redis://default:$(REDIS_PASSWORD)@localhost:6379
                - ping
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 5
            exec:
              command:
                - redis-cli
                - --no-auth-warning
                - -u
                - redis://default:$(REDIS_PASSWORD)@localhost:6379
                - ping
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: redis-config
              mountPath: /etc/redis
      volumes:
      - name: redis-config
        configMap:
          name: paperless-ngx-redis-config
      - name: data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-redis
  namespace: paperless
  labels:
    app.kubernetes.io/instance: paperless-ngx-redis
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: paperless-ngx-redis
    app.kubernetes.io/name: redis
