paperless/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`paperless.fritz.box`)
    services:
    - name: paperless-ngx
      port: 8000
